--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-rtpbreak (1.3a-1) unstable; urgency=low
+rtpbreak (1.3a-1kali0) kali; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release 
 
  -- Devon Kearns <dookie@kali.org>  Sun, 30 Dec 2012 18:00:10 -0700
